@@ -6,6 +6,11 @@
 
                                   Changelog
 
+Yang Tse (11 Nov 2009)
+- Marco Maggi reported that compilation failed when configured --with-gssapi
+  and GNU GSS installed due to a missing mutual exclusion of header files in
+  the Kerberos 5 code path. He also verified that my patch worked for him.
+
 Daniel Stenberg (11 Nov 2009)
 - Constantine Sapuntzakis posted bug #2891595
   (http://curl.haxx.se/bug/view.cgi?id=2891595) which identified how an entry
